# ztsi-stability-gateway

./: .gitignore  AGENTS.md  FAILURE_MODES.md  GOVERNANCE_ASSUMPTIONS.md  PUBLIC_BOUNDARY.md  README.md  RELEASE_CANDIDATE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  VALIDATION_ROADMAP.md  pyproject.toml
docs/: api.md  architecture.md  drift-intelligence.md  llm-adapter.md  memory-engine.md  multi-agent-mesh.md  policy-engine.md  projection-engine.md  public-roadmap.md  repository-boundary.md  telemetry-mesh.md  whitepaper-summary.md
examples/: demo_unstable_output.py  public_demo_flow.py
policy/: default_policy.yaml
src/: main.py
src/agents/: __init__.py  agent.py  arbitration.py  budgets.py  mesh.py  permissions.py  registry.py  sandbox.py
src/api/: __init__.py  routes.py  schemas.py  server.py
src/dashboard/: __init__.py  charts.py  runtime_dashboard.py  summaries.py
tests/: test_agent_arbitration.py  test_agent_budgets.py  test_agent_registry.py  test_agent_sandbox.py  test_api.py  test_coherence.py  test_contradiction.py  test_dashboard.py  test_drift.py  test_drift_intelligence.py  test_firewall.py  test_generate_api.py  test_governance_status.py  test_health.py  test_lineage.py  test_lineage_graph.py  test_llm_adapter.py  test_lockdown.py  test_memory.py  test_mesh_health.py  test_policy_engine.py  test_projection.py  test_recovery.py  test_recursive_instability.py  test_rollback.py  test_rule_evaluator.py  test_semantic_drift.py  test_snapshots.py  test_stabilization.py  test_telemetry.py  test_validation_evidence_pack.py
validation/: README.md
(+53 files in other folders)
